--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-image": "^3.15.0",
     "gatsby-plugin-postcss": "^6.15.0",
     "gatsby-plugin-react-helmet": "^6.15.0",
     "gatsby-plugin-sharp": "^5.15.0",
     "gatsby-plugin-sitemap": "^6.15.0",
+    "gatsby-transformer-sharp": "^5.15.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0"
   }
